[gd_scene load_steps=10 format=3 uid="uid://bsh0sse8th4vb"]

[ext_resource type="PackedScene" uid="uid://bw0y3r3wvwxkm" path="res://dialog_scenes/level_graxaim.tscn" id="1_hmdd8"]
[ext_resource type="Script" uid="uid://c2koa6hr43m7a" path="res://scripts/tela_jogo_scripts/pampa.gd" id="1_lmhuu"]
[ext_resource type="PackedScene" uid="uid://bwdlfrvjkrqns" path="res://scenes/level_missions.tscn" id="2_gbwer"]
[ext_resource type="PackedScene" uid="uid://dqu0j2hrsrtt2" path="res://scenes/progressbar_missoes.tscn" id="3_52n46"]
[ext_resource type="Script" uid="uid://t13aiph8r3xx" path="res://scripts/Mission.gd" id="4_cq1h4"]
[ext_resource type="PackedScene" uid="uid://2ubsbgso1mxg" path="res://scenes/core_gameplay/game_main.tscn" id="4_k156u"]
[ext_resource type="Resource" uid="uid://wu0xf5ruvc8w" path="res://Resources/missoes_pampa/banhados_essenciais.tres" id="5_7ymxb"]
[ext_resource type="Resource" uid="uid://4lwfiy2it1cf" path="res://Resources/missoes_pampa/campos_abertos.tres" id="6_71uiy"]
[ext_resource type="Resource" uid="uid://jnqp5p7s86ri" path="res://Resources/missoes_pampa/gramineas.tres" id="7_n20ng"]

[node name="Pampa" type="Node2D"]
script = ExtResource("1_lmhuu")

[node name="Level_graxaim" parent="." instance=ExtResource("1_hmdd8")]

[node name="LevelMissions" parent="." instance=ExtResource("2_gbwer")]
missions = Array[ExtResource("4_cq1h4")]([ExtResource("5_7ymxb"), ExtResource("6_71uiy"), ExtResource("7_n20ng")])

[node name="progressbar_missoes" parent="." instance=ExtResource("3_52n46")]

[node name="GameMain" parent="." instance=ExtResource("4_k156u")]
